# lambdabot

lambdabot/: lambdabot.cabal
lambdabot-core/src/Lambdabot/Plugin/Core/: Version.hs
lambdabot-dsg-plugins/: LICENSE  lambdabot-dsg-plugins.cabal
lambdabot-dsg-plugins/src/Lambdabot/Plugin/: DSG.hs
lambdabot-dsg-plugins/src/Lambdabot/Plugin/DSG/: Token.hs
lambdabot-dsg-plugins/src/Lambdabot/Util/: HTTP.hs  Powershell.hs  Token.hs
lambdabot/src/: Main.hs  Modules.hs
