name:                   lambdabot-dsg-plugins
version:                0.0.1.0

license:                BSD3
license-file:           LICENSE

author:                 David Joyner
maintainer:             david@joynerhome.net

category:               Development, Web
synopsis:               Lambdabot is a development tool and advanced IRC bot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        It operates as a command line tool, embedded in an editor,
                        embedded in GHCi, via internet relay chat and on the web.

homepage:               http://github.com/djoyner/lambdabot

build-type:             Simple
cabal-version:          >=1.8

source-repository head
  type:                 git
  location:             https://github.com/djoyner/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall

  exposed-modules:      Lambdabot.Plugin.DSG

  other-modules:        Lambdabot.Plugin.DSG.Token
                        Lambdabot.Util.HTTP
                        Lambdabot.Util.Token

  build-depends:        base                            >= 4.6,
                        lambdabot-core                  >= 5,
                        aeson,
                        bytestring,
                        connection,
                        http-client-tls,
                        http-conduit,
                        http-types,
                        mtl,
                        resourcet,
                        text
